--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ header
 {
     background-color: #5AC0CE;
     position: relative;
-    padding:12px;
+    padding:1em;
     color:white;
     text-align: center;
 }
@@ -11,7 +11,7 @@ button
     width:  100%;
     background-color: #5AC0CE;
     position: relative;
-    padding:22px;
+    padding:1.5em;
     color:white;
     text-align: center;
     border:0;
@@ -23,7 +23,7 @@ body
 }
 div
 {
-    margin: 1px 0 1px 0;
+    margin: 0.1em 0 0.1em 0;
     height:5%;
 }
 .left
@@ -36,7 +36,7 @@ div
 }
 div.center
 {
-    padding: 10px;
+    padding: 1em;
     background-color: white;
     overflow:hidden;
 }
@@ -44,14 +44,22 @@ div.image
 {
     float: left;
 }
+div.bar
+{
+    height:100%;
+    padding: 0.1em;
+    background-color: #EEF0F4;
+    display:inline;
+}
 img
 {
-    height: 30px;
+    height: 1.5rem;
 }
 input
 {
-    height: 30px;
-    width: 50%;
+    height: 2rem;
+    width: 6em;
+    font-size: 0.1em ;
     border:0;
     outline:none;
 }
