--- a/index.css
+++ b/index.css
@@ -1,69 +1,53 @@
-header
-{
-    background-color: #5AC0CE;
-    position: relative;
-    padding:1em;
-    color:white;
-    text-align: center;
-}
-button
-{
-    width:  100%;
-    background-color: #5AC0CE;
-    position: relative;
-    padding:1.5em;
-    color:white;
-    text-align: center;
-    border:0;
-}
-body
-{
-    margin: 0 0 0 0 ;
-    background-color: #EEF0F4;
-}
-div
-{
-    margin: 0.1em 0 0.1em 0;
-    height:5%;
-}
-.left
-{
-    float: left;
-}
-.right
-{
-    float: right;
-}
-div.center
-{
-    padding: 1em;
-    background-color: white;
-    overflow:hidden;
-}
-div.image
-{
-    float: left;
-}
-div.bar
-{
-    height:100%;
+header {
+  background-color: #5AC0CE;
+  position: relative;
+  padding: 1em;
+  color: white;
+  text-align: center; }
+
+body {
+  margin: 0;
+  background-color: #EEF0F4; }
+
+div {
+  margin: 0.1em 0 0.1em 0;
+  height: 5%; }
+  div .image {
+    float: left; }
+  div .bar {
+    height: 100%;
     padding: 0.1em;
     background-color: #EEF0F4;
-    display:inline;
-}
-img
-{
-    height: 1.5rem;
-}
-input
-{
+    display: inline; }
+  div img {
+    height: 1.5rem; }
+  div a {
+    color: #5AC0CE; }
+  div input {
     height: 2rem;
     width: 50%;
-    font-size: 0.5em ;
-    border:0;
-    outline:none;
-}
-a
-{
-    color: #5AC0CE;
-}
+    font-size: 0.5em;
+    border: 0;
+    outline: none; }
+
+button {
+  width: 100%;
+  background-color: #5AC0CE;
+  position: relative;
+  padding: 1.5em;
+  color: white;
+  text-align: center;
+  border: 0; }
+
+.left {
+  float: left; }
+
+.right {
+  float: right; }
+
+.center {
+  padding: 1em;
+  background-color: white;
+  overflow: hidden; }
+
+/*# sourceMappingURL=index.css.map */
